<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estatisticas"
            android:id="@+id/textView5"
            android:textColor="#BF671F"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textIsSelectable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasto_total"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_relatorio_gastoTotal_texto"
                android:id="@+id/tv_relatorio_gastoTotal"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_relatorio_combustivelMaisUsado_texto"
                android:id="@+id/tv_relatorio_combustivelMaisUsado"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posto"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_relatorio_postoMaisUsado_texto"
                android:id="@+id/tv_relatorio_postoMaisUsado"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:textColor="#000"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_relatorios"
        android:id="@+id/textView3"
        android:textColor="#BF671F"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:layout_marginBottom="5sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_relatorio_lista" />

</LinearLayout>