<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_relatorio_posto_texto"
            android:id="@+id/tv_relatorio_posto"
            android:textSize="20sp"
            android:layout_marginRight="20dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_relatorio_tipo_texto"
            android:id="@+id/tv_relatorio_tipo"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:textColor="#000"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_relatorio_data_texto"
            android:id="@+id/tv_relatorio_data"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_relatorio_valorTotal_texto"
            android:id="@+id/tv_relatorio_valorTotal"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_relatorio_litros_texto"
            android:id="@+id/tv_relatorio_litros"
            android:textSize="20sp"
            android:textColor="#000" />
    </LinearLayout>
</LinearLayout>